# pandora-target

./: .gitignore  PS_2023-04-10.csv  PS_2023-04-25.csv  README.md  pyproject.toml
.ipynb_checkpoints/: pandora-target-tutorial-checkpoint.ipynb
pandora_target/: pandoratarget.py  pandoratarget.py~  queryarchive.py  queryarchive.py~  utils.py  utils.py~
