[tool.poetry]
name = "pandora-target"
version = "0.1.0"
description = ""
authors = ["benhord <benjhord@gmail.com>"]
readme = "README.md"
packages = [{include = "pandora_target"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
